k8s/networking/virtualservice-50-v1-v3.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: carrental
spec:
  hosts:
    - carrental
  http:
  - route:
    - destination:
        host: carrental
        subset: v1
      weight: 50
    - destination:
        host: carrental
        subset: v3
      weight: 50
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: destination
spec:
  hosts:
    - destination
  http:
  - route:
    - destination:
        host: destination
        subset: v1
      weight: 50
    - destination:
        host: destination
        subset: v3
      weight: 50
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hotel
spec:
  hosts:
    - hotel
  http:
  - route:
    - destination:
        host: hotel
        subset: v1
      weight: 50
    - destination:
        host: hotel
        subset: v3
      weight: 50
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: currencyexchange
spec:
  hosts:
  - currencyexchange
  http:
  - route:
    - destination:
        host: currencyexchange
        subset: v1
---
